--- a/src/assets/styles/sass/about.scss
+++ b/src/assets/styles/sass/about.scss
@@ -16,7 +16,7 @@
     {
         width: 90%;
         height: auto;
-        margin: 60px 0 0 0;
+        margin: 30px 0 0 0;
         >p
         {
             font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -31,8 +31,21 @@
             color: rgb(79 70 229);
         }
     }
-    button
+    a
     {
-        white-space: nowrap;
+        margin: 20px 0 0 0;
+        button
+        {
+            white-space: nowrap;
+            margin: 0;
+        }
     }
+}
+
+.footerContainer
+{
+  a
+  {
+    margin: 0 10px 0 0;
+  }
 }
